Fixed with scrollbar and icon

--- a/source/code/component.css
+++ b/source/code/component.css
@@ -18,4 +18,11 @@ code {
     border: solid 1px rgba(210, 215, 217, 0.75);
     font-family: "Courier New", monospace;
     font-size: var(--font-size-small);
+    position: relative;
+}
+
+.icon-position{
+    position: absolute;
+    top: -30px;
+    left: 280px;
 }
